# internal/auth/handler.go
@@ -10,9 +10,10 @@ import (
 )
 
 const (
-	success         = "success"
+	success         = "Success"
 	jsonParseFailed = "JSON parse failed"
 	emailTaken      = "Email address already taken"
+	logoutFailed    = "Logout failed"
 )
 
 type Api struct {
@@ -102,5 +103,23 @@ func (api *Api) Login(w http.ResponseWriter, r *http.Request) {
 	}
 
 	api.sessionStore.Put(r.Context(), "user_id", id.String())
+	common.WriteJSON(w, http.StatusOK, common.SuccessResponse{Status: success})
+}
+
+// Logout log the user out of the current session
+//
+//	@Summary	log the user out of the current session
+//	@Tags		auth
+//	@Produce	json
+//	@Success	200	{object}	common.SuccessResponse
+//	@Failure	500
+//	@Router		/auth/logout	[post]
+func (api *Api) Logout(w http.ResponseWriter, r *http.Request) {
+	err := api.sessionStore.Destroy(r.Context())
+	if err != nil {
+		log.Error().Err(err).Msg("failed to destroy session")
+		common.WriteJSON(w, http.StatusInternalServerError, common.ErrorResponse{Error: logoutFailed})
+		return
+	}
 	common.WriteJSON(w, http.StatusOK, common.SuccessResponse{Status: success})
 }
